# goit-personal-assistant

./: .gitignore  CONTRIBUTION.md  README.md  addressbook.pkl  main.py  pyproject.toml  requirements.txt
goit_personal_assistant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
personal_assistant/: __init__.py  personal_assistant.py
personal_assistant/address_book/: __init__.py  address_book.py  address_book_event_handlers.py
personal_assistant/address_book/constants/: __init__.py  events_description.py
personal_assistant/address_book/models/: __init__.py  address_book_events.py
personal_assistant/address_book/record/: __init__.py  record.py  record_fields.py
personal_assistant/notes/: __init__.py  notes.py  notes_event_handlers.py
personal_assistant/notes/constants/: __init__.py  events_description.py
personal_assistant/notes/models/: __init__.py  notes_events.py
personal_assistant/notes/note/: __init__.py  note.py  note_fields.py
personal_assistant/shared/: __init__.py
personal_assistant/shared/error_handler/: __init__.py  error_handler.py  errors.py
personal_assistant/shared/error_handler/decorators/: __init__.py  catch_error.py  error_handler.py
personal_assistant/shared/error_handler/models/: __init__.py  errors.py
personal_assistant/shared/event_handler/: __init__.py  event_handler.py
personal_assistant/shared/input_handler/: __init__.py
personal_assistant/shared/models/: __init__.py  data_field.py  statuses.py
personal_assistant/shared/utils/: __init__.py  input_data_helpers.py
(+13 files in other folders)
